--- a/play.html
+++ b/play.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Física Games</title>
+    <title>Breakout Game</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <style>
         body {    
@@ -21,7 +21,7 @@
 </head>
 <body>
     <h5 style="position: absolute; right: 500px; top:0; font-size: 50px">Score: <span id="point">0</span></h5>
-    
+
     <div id="alertContainer" class="text-center " 
         style="visibility:hidden; background-color:aliceblue; 
         position:absolute; top:45%; left: 35%; 
