remove test messages

--- a/play.html
+++ b/play.html
@@ -29,8 +29,8 @@
         border-radius: 5px; 
         width:350px; height: 170px">
 
-        <p id="alertTitle" class="mx-2 my-0 font-weight-bold">Title</p>
-        <p id="alertMessage" class="mx-2 my-3">Message</p>
+        <p id="alertTitle" class="mx-2 my-0 font-weight-bold"></p>
+        <p id="alertMessage" class="mx-2 my-3"></p>
         <span style="position: absolute; bottom:10%; left:15%" class="btn btn-info w-75" onclick="resetPage()">OK</span>   
     </div>
 </body>
