--- a/play.html
+++ b/play.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
 
     <div id="alertContainer" class="text-center " 
         style="visibility:hidden; background-color:aliceblue; 
-        position:absolute; top:45%; left: 35%; 
+        position:absolute; top:30%; left: 8%; 
         border: 1px solid rgb(141, 141, 141);
         border-radius: 5px; 
         width:350px; height: 170px">
