--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <h5 style="position: absolute; right: 500px; top:0; font-size: 50px">Score: <span id="point">0</span></h5>
+    <h5 style="position: absolute; left: 75%; top:0; font-size: 50px">Score: <span id="point"></span></h5>
+    <h6 style="position: absolute; left: 75%; top:10%; font-size: 50px">Level: <span id="level"></span></h6>
 
     <div id="alertContainer" class="text-center " 
         style="visibility:hidden; background-color:aliceblue; 
