--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container w-100 mw-100 h-100 mh-100 text-center mx-auto main">
 
-        <div class="row">
+        <div class="row" style="background-color: #FFF">
             <h5 class="col">Score: <span id="point"></span></h5>
             <h5 class="col">Level: <span id="level"></span></h5>
         </div>
