--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <div class="container w-100 mw-100 h-100 mh-100 text-center mx-auto main">
+    <div class="container w-100 h-100 mh-100 text-center mx-auto main">
 
         <div class="row" style="background-color: #FFF">
             <h5 class="col">Score: <span id="point"></span></h5>
